fix: resolve SonarQube and OWASP security vulnerabilities across frontend and backend
OWASP A01 - Broken Access Control:
- Restrict actuator endpoints to /health and /info only
- Change health show-details from 'always' to 'when-authorized'
- Mitigate user enumeration in check-username/check-email endpoints

OWASP A02/A04 - Cryptographic & Insecure Design:
- Remove password reset token from API response body
- Return generic message for forgot-password regardless of email existence
- Sanitize uploaded media filenames with UUID to prevent path traversal

OWASP A05 - Security Misconfiguration:
- Replace CORS wildcard headers with explicit whitelist
- Stop leaking exception details in all GlobalExceptionHandlers
- Disable SQL show-sql across all services

OWASP A09 - Log Injection & SonarQube Code Quality:
- Add sanitizeLogInput() to strip CR/LF/TAB from logged user input
- Replace raw Map.class with ParameterizedTypeReference in WebClient calls
- Use Java 16+ instanceof pattern matching in all fallback methods
- Replace Collectors.toList() with .toList()
- Add pagination size bounds (max 100) to prevent abuse
- Fix LoggingAspects to not log exception messages containing user data

Input Validation:
- Add @Size constraints to all DTOs (RegisterRequest, LoginRequest,
  UpdateProfileRequest, CreatePostRequest, UpdatePostRequest,
  CreateNotificationRequest)

Frontend:
- Replace catch(err: any) with catch(err: unknown) + proper type narrowing
- Remove console.error calls, use silent catch with comments
- Block javascript: and data: protocol URLs in getMediaUrl
- Update ForgotPassword to work with new secure API response

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>